ISSUE: PURPOSE: Fix autogrow textareas, prevent adding height on every keystroke, not just when text doesn't fit in textarea. DESCRIPTION: The css for data-entry-textarea applying a padding of 0.2em breaks the calculation of scrollHeight, changing this to 0.25rem and fontsize to use rem instead of em.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1433,14 +1433,14 @@ textarea {
 	padding-left: .5em;
 	padding-right: .5em;
 }
-.data-entry-textarea {
+.data-entry-textarea { /* Caution: used on autogrow textareas, if changed check that autogrow behavior doesn't break */
 	width: 100%;
-	height: calc(.875em + .8rem + 1px);
+	height: calc(.875rem + .8rem + 1px);
 	border: 1px solid #ced4da;
-	font-size: .875em;
+	font-size: .875rem;
 	line-height: 1.5em;
 	border-radius: .2rem;
-	padding: .2em .5rem;
+	padding: .25rem .5rem;
 	display: block;
 	background-color: #fff;
 	background-clip: padding-box;
